--- a/manifest.yaml
+++ b/manifest.yaml
@@ -4,6 +4,6 @@ type: Prevention
 title: Test Bot Doesnt Do anything
 description:  This bot doesnt do anything.
 cloud: AWS
-operation: TEST_OPERATION
+operation: EXECUTE_PYTHON_SCRIPT
 authorName: Joshua Bell
 authorEmail: joshua.bell@sonraisecurity.com
